--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -7,3 +7,12 @@ body,
     margin: 0;
     padding: 0;
 }
+
+.el-breadcrumb {
+    margin-bottom: 15px;
+}
+
+.el-table {
+    margin: 15px 0;
+    font-size: 16px;
+}
