--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,6 +6,7 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb {
@@ -15,4 +16,9 @@ body,
 .el-table {
     margin: 15px 0;
     font-size: 16px;
+}
+
+.vconter {
+    display: flex;
+    align-items: center;
 }
